--- a/conf.json.sample
+++ b/conf.json.sample
@@ -31,6 +31,9 @@
                 "file": "/audit/audit.log",
 		"format": "json"
         },
+        "debug": {
+                "enabled": "no"
+        },
         "volumes": [
                 {
                 "name": "/tmp",
